codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_monthly_limit.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────────╮
│  >_ Codexx (Fork of OpenAI Codex) (v0.0.0)                                │
│                                                                           │
│  Model:           gpt-5-codex (reasoning none, summaries auto)            │
│  Directory: [[workspace]]                                                 │
│  Approval:        on-request                                              │
│  Sandbox:         read-only                                               │
│  Agents.md:       <none>                                                  │
│                                                                           │
│  Token usage:     1.2K total  (800 input + 400 output)                    │
│  Monthly limit:   [██░░░░░░░░░░░░░░░░░░] 12% used (resets 07:08 on 7 May) │
╰───────────────────────────────────────────────────────────────────────────╯
