codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────╮
│  >_ Codexx (Fork of OpenAI Codex) (v0.0.0) │
│                                            │
│  Model:         gpt-5-codex (reasoning hig │
│  Directory: [[workspace]]                  │
│  Approval:      on-request                 │
│  Sandbox:       read-only                  │
│  Agents.md:     <none>                     │
│                                            │
│  Token usage:   1.9K total  (1K input + 90 │
│  5h limit:      [███████████████░░░░░] 72% │
│                 (resets 03:14)             │
╰────────────────────────────────────────────╯
